--- a/style.css
+++ b/style.css
@@ -5,3 +5,29 @@ body {
 h1{
     color: #fff;
 }
+
+.sidebar_navigation{
+    background-color: #121212;
+    border-radius: 8px;
+    padding: 16px 0 0 16;
+}
+
+.sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    padding: 12px;
+    width: 300px;
+}
+
+.logo {
+    background: #121212;
+    display: flex;
+    border-radius: 8px;
+    padding: 16px 0 0 16px;
+}
+
+.logo img{
+    width: 80px;
+}
