--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h1{
     width: 300px;
 }
 
-.logo {
+.sidebar_navigation .logo {
     background: #121212;
     display: flex;
     border-radius: 8px;
@@ -30,4 +30,20 @@ h1{
 
 .logo img{
     width: 80px;
+}
+.sidebar nav ul {
+    margin-top: 20px;
+    padding: 0 20px 10px 20px;
+}
+
+.sidebar ul li {
+    padding: 10px 0;
+}
+
+.sidebar nav ul li a {
+    color: #b3b3b3;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 14px;
+    font-family: "DM Sns", sans-serif;
 }
